[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kryptorious-dataforge"
version = "1.1.0"
description = "Universal data format converter — JSON, YAML, TOML, CSV, XML. Convert, validate, merge."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Kryptorious Quantum Biosciences, Inc."}]
dependencies = ["click>=8.0", "rich>=13.0", "pyyaml>=6.0", "tomli>=2.0; python_version < '3.11'"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0"]

[project.scripts]
dataforge = "dataforge.cli:main"

[project.urls]
Homepage = "https://devflow.sh"

[tool.setuptools.packages.find]
where = ["src"]
